Nombre de usuario

--- a/home.html
+++ b/home.html
@@ -50,8 +50,8 @@
 				<div class="btn-group">
 					<button type="button" class="btn dropdown-toggle btn-user" data-bs-toggle="dropdown"
 						aria-expanded="false">
-						<span class="user-name">
-							Monika Ruiz Pando
+						<span class="user-name" id="name-user">
+							
 						</span>
 						<span class="material-icons">
 							account_circle
@@ -657,6 +657,7 @@
 
 	<script src="js/main.js"></script>
 	<script src="view/login/logout.js"></script>
+	<script src="view/perfil/datos.js"></script>
 	<script>
 		$("#admin-panel").load("dashboard.html");
 	</script>
