--- a/docente.html
+++ b/docente.html
@@ -7,12 +7,12 @@
                 </h2>
             </div><!-- showAgregarEspecialidad -->
             <div class="header-panel">
-                <button type="button" id="btn-agregarEspecialidad" name="button"
-                    class="btn btn-large secundary-button">
+                <button type="button" id="btn-agregarEspecialidad" name="button" class="btn btn-large secundary-button"
+                    onclick="exportarDocente()">
                     Exportar
                 </button>
-                <button type="button" id="btn-nuevo-docente" name="button"
-                    class="btn btn-large primary-button" onclick="nuevoRegistroDocente()">
+                <button type="button" id="btn-nuevo-docente" name="button" class="btn btn-large primary-button"
+                    onclick="nuevoRegistroDocente()">
                     Nuevo
                 </button>
             </div>
