--- a/opcionocupacional.html
+++ b/opcionocupacional.html
@@ -8,7 +8,7 @@
             </div><!-- showAgregarEspecialidad -->
             <div class="header-panel">
                 <button type="button" id="btn-agregarEspecialidad" name="button"
-                    class="btn btn-large secundary-button">
+                    class="btn btn-large secundary-button"  onclick="exportarOpcion()">
                     Exportar
                 </button>
                 <button type="button" id="btn-nuevo-opcion" name="button"
