--- a/familiaprofesional.html
+++ b/familiaprofesional.html
@@ -8,7 +8,7 @@
             </div><!-- showAgregarEspecialidad -->
             <div class="header-panel">
                 <button type="button" id="btn-agregarEspecialidad" name="button"
-                    class="btn btn-large secundary-button">
+                    class="btn btn-large secundary-button" onclick="exportarFamilia()">
                     Exportar
                 </button>
                 <button type="button" id="btn-nuevo-familia" name="button"
