--- a/home.html
+++ b/home.html
@@ -656,6 +656,7 @@
 
 
 	<script src="js/main.js"></script>
+	<script src="view/perfil/sesion.js"></script>
 	<script src="view/login/logout.js"></script>
 	<script src="view/perfil/datos.js"></script>
 	<script>
